# gputop-online

./: .gitignore  README.md  README_zh.md  pyproject.toml
docs/: DESIGN.md  HISTORY.md  OPERATIONS.md  nodes.example.yaml  plan_stage2.1.md  plan_stage2.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts  styles.css
scripts/: README.md  bench_probe.sh  db_maintenance.sh  setup.sh  start.sh  start_cluster.sh  start_tunnel.sh  status.sh  status_cluster.sh  status_tunnel.sh  stop.sh  stop_cluster.sh  stop_tunnel.sh
scripts/maintenance/: db.sh
scripts/service/: start.sh
src/constella/: __init__.py  agent.py  app.py  cli.py  cluster.py  cluster_control.py  db.py  nvml.py  schema.py
src/gputop_online/: __init__.py  app.py  cli.py  collector.py  nvidia_smi.py  nvml.py  procfs.py  schema.py
tests/: test_agent.py  test_cluster.py  test_cluster_control.py  test_db.py  test_nvidia_smi.py  test_nvml.py  test_schema.py
