[project]
name = "constella"
version = "0.2.0"
description = "Lightweight realtime NVIDIA GPU cluster monitoring web service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=12.0",
]

[project.scripts]
constella = "constella.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constella"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
